fixtures/resolve/abnormal-relative-with-node_modules/foo/bar/baz/test.js
console.log(require.resolve('jest-runner-../../..'))

console.log(require.resolve('jest-runner-/../..'))

console.log(require.resolve('jest-runner-../..')) // error
